Complete rework of colspan/rowspan-code, again removed ".innerrowspanX", replaced with global ".innerrowspan" removed ".widget_container .widget_container" (not needed anymore) removed calculation of "colspanX", instead dynamic style-attributes   are added to all widgets colspan/rowspan should now work correctly within groups default-colspan is now given by a ".colspandefault" in basic.css,   the "width: X px;" makes a default widget-witdh of X/12th of screen-width PLEASE: Test extensively, WFM in FF 10, Chrome 17, Safari 5.1.2 and on iOS 5.1

--- a/visu/designs/discreet_slim/basic.css
+++ b/visu/designs/discreet_slim/basic.css
@@ -74,16 +74,12 @@ div#top {
   vertical-align: middle;
 }
 
-.colspan0 { /* multiple of 8.33333% ! */
-  width: 33.33332%;
+.colspandefault { /* in units of 1/12 screen width */
+  width: 4px;
 }
 
 .widget_container {
   float: left;
-}
-
-.widget_container .widget_container {
-    width: 100%;
 }
 
 .widget
