--- a/visu/designs/pure/basic.css
+++ b/visu/designs/pure/basic.css
@@ -67,12 +67,8 @@ body br
    float: left;
 }
 
-/*.widget_container .widget_container {
-    width: 100%;
-}*/
-
-.colspan0 { /* multiple of 8.33333% ! */
-  width: 49.9998%;
+.colspandefault { /* in units of 1/12 screen width */
+  width: 6px;
 }
 
 .widget
